# mcp-nokotime

./: .coverage  .env.example  .eslintrc.json  .gitignore  LICENSE  README.md  claude-desktop.json  hello.py  jest.config.js  package-lock.json  package.json  pyproject.toml  test_connection.py  todo-conversion.md  todo.md  tsconfig.json
src/: index.ts
src/nokotime/: __init__.py  noko-api.ts  server.py  server.ts  tools.py
src/nokotime/resources/: index.ts
src/nokotime/tools/: entries.ts  index.ts  projects.ts  users.ts
src/nokotime/types/: entry.ts  index.ts  project-group.ts  project.ts  team.ts  user.ts
src/nokotime/utils/: date-ranges.ts
tests/: conftest.py  test_server.py  test_server.ts  test_tools.py
