[project]
name = "nokotime"
version = "0.1.0"
description = "Noko time tracking MCP server"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "httpx",
    "mcp",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
